<?xml version="1.0" encoding="utf-8"?>
<resources>
  	<string name="hello">Hello World, Habit!</string>
	<string name="app_name">Habit Tracker</string>
  	<string name="no_habits">Currently there are no habits recorded</string>
  	<string name="no_goals">Currently there are no goals recorded</string>
  	<string name="no_events">Currently there are no events recorded</string>
  	<string name="no_moods">Currently there are no descriptors</string>
  	<string name="menu_insert">Add Item</string>
  	<string name="menu_edit">Edit</string>
  	<string name="menu_new">New</string>
  	<string name="menu_delete">Delete</string>
  	<string name="habit_summary">Name</string>
  	<string name="habit_description">Delete Habit</string>
  	<string name="habit_edit_name">Name</string>
  	<string name="habit_edit_color">Color</string>
  	<string name="habit_edit_description">Description</string>
  	<string name="habit_edit_confirm">Save</string>
    <string name="habit_edit_cancel">Cancel</string>
    <string name="goal_options_header">Goal Options</string>
    <string name="event_options_header">Event Options</string>
    <string name="habits_tab">Habits</string>
    <string name="events_tab">Events</string>
    <string name="goals_tab">Goals</string>
    <string name="statistics_tab">Stats</string>
    <string name="mood_tab">Mood</string>
    
  	<string name="action_insert">New</string>
  	
    <string name="hello_world"><b>Hello, <i>World!</i></b></string>
  	<string name="retained">Retained state</string>
  	
  	<string name="first">First</string>
    <string name="last">Last</string>
    
        <!-- Label above username EditText -->
    <string
        name="login_activity_username_label">Username</string>
    <!-- Label above password EditText -->
    <string
        name="login_activity_password_label">Password</string>
    <!-- Button to sign in after entering username and password -->
    <string
        name="login_activity_ok_button">Sign In</string>
    <!-- Message shown in progress dialog while app connects to the server -->
    <string
        name="ui_activity_authenticating">Authenticating\u2026</string>
    
    <!-- Message shown in dialog if the username or password is invalid. -->
    <string
        name="login_activity_loginfail_text_both">The username or password isn\'t valid. A Sample SyncAdapter account is
        required. Please try again. </string>
    <!-- Message shown in dialog if the password is invalid -->
    <string
        name="login_activity_loginfail_text_pwonly">You entered the wrong password or your account has changed.
        Please re-enter your password.</string>
    <!-- Message shown in dialog to prompt the user for their password -->
    <string
        name="login_activity_loginfail_text_pwmissing">Type the password for this account.</string>
    <!--
        Message shown if the provided account doesn't support the current
        activity.
    -->
    <string
        name="login_activity_newaccount_text">Sign in to your Habit Tracker account. </string>
    
    <!-- Label for this package -->
    <string name="label">Habit Tracker</string>
    
    <!-- Title string for Login activity-->
    <string name="ui_activity_title">Sign-in</string>
    
    <!--
    <string name="server_url">http://hbit.herokuapp.com</string>
    <string name="oauth_callback">http://hbit.herokuapp.com/oauth_callback</string>
    <string name="oauth_id">8a97b7216e8c81d9d5e539b5c7fb6a29773f07e25fcd2d7306e1a322bf7de39a</string>
    <string name="oauth_secret">527f0f05b76617daf6ceb84263c4b0720a111926d7b3d324d89711632c654c5d</string>
    -->
    <string name="server_url">http://192.168.1.113:3000</string>
    <string name="oauth_callback">http://192.168.1.113:3000/oauth_callback</string>
    <string name="oauth_id">090124fbffd7373e141956abe20a74ee7e2d9cb6c3839fa14bb5e0d7a6328dbf</string>
    <string name="oauth_secret">9202884a73244f3243b393bdb456d0439f2da37ded544a63bddba699b521c2c7</string>
    <string name="oauth_account_name">Test Account</string>
    <string name="oauth_account_type">org.dhappy.habits.sync</string>
    <string name="oauth_authority">org.dhappy.habits.contentprovider</string>

    <string name="weight_confirm">Record</string>
    <string name="weight_cancel">Cancel</string>
</resources>
