<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll" 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    <LinearLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" >

    	<EditText
            android:id="@+id/habit_edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/habit_edit_name"
            android:imeOptions="actionNext" >
        </EditText>

    	<EditText
            android:id="@+id/habit_edit_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/habit_edit_color"
            android:imeOptions="actionNext" >
        </EditText>

   	    <EditText
    	    android:id="@+id/habit_edit_description"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
        	android:gravity="top"
        	android:hint="@string/habit_edit_description"
        	android:imeOptions="actionNext"
        	android:minLines="5" >
    	</EditText>

    	
    	<LinearLayout style="@style/FillWidth.Hor">
    	    <Button
                android:id="@+id/habit_cancel_button"
                style="@style/ControlButton"
                android:text="@string/habit_edit_cancel" >
            </Button>

            <Button
                android:id="@+id/habit_edit_button"
                style="@style/ControlButton"
                android:text="@string/habit_edit_confirm" >
            </Button>
        </LinearLayout>
   	</LinearLayout>
</ScrollView>
